[package]
name = "i_dao"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "25.0.0"
log = "0.4.21"
env_logger = "0.11.3"
lazy_static = "1.4.0"
thiserror = "1.0.58"
anyhow = "1.0.81"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
bson = "2.10.0"
