[package]
name = "i_dao"
version = "0.1.7"
edition = "2021"
authors = ["PMC <pandamancoin@gmail.com>"]
rust-version = "1.74"
description = "mysql 数据库增改查"
documentation = "https://github.com/PandaManPMC/i_dao.git"
readme = "README.md"
repository = "https://github.com/PandaManPMC/i_dao.git"
license = "MIT OR Apache-2.0"

[dependencies]
log = "0.4.21"
env_logger = "0.11.3"
mysql = "25.0.0"
r2d2_mysql = "24.0.0"
lazy_static = "1.4.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
i_dao_proc_macro = "0.1.0"
tokio = { version = "1.38.0", features = ["full"] }
